--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,11 @@
     <module>azure-data-lake-store-java</module>
     <module>azure-keyvault-java</module>
   </modules>
-
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
   <build>
     <plugins>
