--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install: ./clone-repos.sh
 
 script:
   - mvn site
-  - ./gradlew -Dorg.ajoberstar.grgit.auth.username=${username} -Dorg.ajoberstar.grgit.auth.password=${password} publishGhPages
+  - ./gradlew -Dorg.ajoberstar.grgit.auth.username=${username} -Dorg.ajoberstar.grgit.auth.password=${password} gitPublishPush
