--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
 
   <modules>
     <module>azure-functions-java-worker</module>
-    <module>azure-service-bus-java</module>
+    <!--<module>azure-service-bus-java</module>
     <module>azure-storage-java</module>
-    <module>azure-iot-sdk-java</module>
+    <module>azure-iot-sdk-java</module>-->
     <!--<module>azure-documentdb-java</module>-->
-    <module>azure-event-hubs-java</module>
+    <!--<module>azure-event-hubs-java</module>
     <module>azure-libraries-for-java</module>
     <module>azure-data-lake-store-java</module>
-    <module>azure-keyvault-java</module>
+    <module>azure-keyvault-java</module>-->
   </modules>
   
   <properties>
