--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ git:
 install: ./clone-repos.sh
 
 script:
-  - mvn site
+  - mvn javadoc:aggregate
   - ./gradlew -Dorg.ajoberstar.grgit.auth.username=${username} -Dorg.ajoberstar.grgit.auth.password=${password} gitPublishPush
