--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,7 @@
     <module>azure-event-hubs-java</module>
     <module>azure-iot-sdk-java</module>
 
-    <!-- testing -->
-    
-
     <!-- Untested -->
-    
 
     <!-- Repos that fail to compile -->
     <!-- <module>azure-libraries-for-java</module> -->
@@ -25,6 +21,7 @@
     <!-- Repos with JavaDoc errors that fail build -->
     <!-- <module>azure-storage-java</module> -->
     <!-- <module>azure-batch-sdk-for-java</module> -->
+    <!-- <module>azure-sdk-for-java</module> -->
   </modules>
 
   <properties>
@@ -34,25 +31,6 @@
 
   <build>
     <plugins>
-      <!--
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.0</version>
-            <configuration>
-                <additionalparam>${javadoc.opts}</additionalparam>
-            </configuration>
-            <reportSets>
-                <reportSet>
-                    <id>aggregate</id>
-                    <reports>
-                        <report>aggregate</report>
-                    </reports>
-                </reportSet>
-            </reportSets>
-        </plugin>
-      -->
-
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
@@ -65,6 +43,7 @@
                         <version>3.0.0</version>
                         <configuration>
                             <additionalparam>${javadoc.opts}</additionalparam>
+                            <excludePackageNames>samples.*:tools.*</excludePackageNames>
                         </configuration>
                         <reportSets>
                             <reportSet>
