--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,18 @@
     <module>azure-service-bus-java</module>
     <module>azure-data-lake-store-java</module>
     <module>azure-event-hubs-java</module>
+    <module>azure-keyvault-java</module>
+    <module>azure-batch-sdk-for-java</module>
 
     <!-- Fails to build under JDK 9 -->
     <!-- <module>azure-iot-sdk-java</module> -->
 
     <!-- Untested -->
-
     <!-- Repos that fail to compile -->
     <!-- <module>azure-libraries-for-java</module> -->
-    <!-- <module>azure-keyvault-java</module> -->
 
     <!-- Repos with JavaDoc errors that fail build -->
     <!-- <module>azure-storage-java</module> -->
-    <!-- <module>azure-batch-sdk-for-java</module> -->
     <!-- <module>azure-sdk-for-java</module> -->
   </modules>
 
