Generate jar and attempt to push to github also. Also, disable some repos as they are now failing to build :-(

--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,12 @@ gitPublish {
 
     // what to publish, this is a standard CopySpec
     contents {
-        from(file('target/site/apidocs')) {
+        from(file('target/apidocs')) {
           include '**'
+          into '.'
+        },
+        from(file('target')) {
+          include '*.jar'
           into '.'
         }
     }
