Add support for building azure-libraries-for-java from my fork until PR is merged.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ git:
 install: ./clone-repos.sh
 
 script:
-  - mvn javadoc:aggregate-jar
+  - mvn install -DskipTests=true
+  - mvn javadoc:aggregate-jar -DskipTests=true
   - ./gradlew -Dorg.ajoberstar.grgit.auth.username=${username} -Dorg.ajoberstar.grgit.auth.password=${password} gitPublishPush
