Reintroduce building of the azure-libraries-for-java project, using my fork, until a PR is merged.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ jdk:
 os:
   - linux
 
+git:
+  depth: 1
+
 branches:
   only:
     - master
@@ -14,9 +17,6 @@ cache:
   directories:
   - $HOME/.gradle
   - $HOME/.m2
-  
-git:
-  depth: false
 
 install: ./clone-repos.sh
 
