Hide the com.microsoft.azure.webjobs package from being output as part of the azure functions doc output

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
                         *.samples.*:
                         tools.*:
                         *.implementation.*:
-                        com.microsoft.azure.storage.core.*
+                        com.microsoft.azure.storage.core.*:
+                        com.microsoft.azure.webjobs.*
                     </excludePackageNames>
                     <groups>
                         <group>
