Trying to get checkstyle publishing to work

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ gitPublish {
         }
         from(file('target/checkstyle/html')) {
             include '**'
-            into './checkstyle'
+            into 'checkstyle'
         }
     }
 
