add missing checkstyle:checkstyle-aggregate task

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install: ./clone-repos.sh
 
 script:
   - mvn install -DskipTests=true
-  - mvn javadoc:aggregate-jar -DskipTests=true
+  - mvn javadoc:aggregate-jar checkstyle:checkstyle-aggregate -DskipTests=true
   - mvn -f checkstyle-pom.xml xml:transform
   - ./gradlew -Dorg.ajoberstar.grgit.auth.username=${username} -Dorg.ajoberstar.grgit.auth.password=${password} gitPublishPush
