--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>azure-event-hubs-java</module>
         <module>azure-keyvault-java</module>
         <module>azure-batch-sdk-for-java</module>
-        <!-- <module>azure-iot-sdk-java</module> -->
+        <module>azure-iot-sdk-java</module>
         <module>azure-libraries-for-java</module>
         <!-- <module>azure-storage-java</module> -->
 
