--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
         <module>azure-iot-sdk-java</module>
         <module>azure-libraries-for-java</module>
         <!-- <module>azure-storage-java</module> -->
+        <module>azure-sdk-for-java</module>
 
         <!-- Repos that fail to compile under JDK 9 -->
         <!--<module>azure-activedirectory-library-for-java</module>-->
 
         <!-- Repos with JavaDoc errors that fail build -->
-        <!-- <module>azure-sdk-for-java</module> -->
     </modules>
 
     <properties>
