--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>azure-batch-sdk-for-java</module>
         <module>azure-iot-sdk-java</module>
         <module>azure-libraries-for-java</module>
-        <!-- <module>azure-storage-java</module> -->
+        <module>azure-storage-java</module>
         <module>azure-sdk-for-java</module>
 
         <!-- Repos that fail to compile under JDK 9 -->
