--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
                 <version>3.0.0</version>
                 <configuration>
                     <additionalparam>${javadoc.opts}</additionalparam>
+                    <doctitle>Azure SDK for Java Reference Documentation</doctitle>
+                    <windowtitle>Azure SDK for Java Reference Documentation</windowtitle>
+                    <failOnError>true</failOnError>
+                    <footer>Visit the &lt;a href="http://java.ms"&gt;Azure for Java Developers&lt;/a&gt; site for more Java documentation, including quick starts, tutorials, and code samples.</footer>
+                    <linksource>false</linksource>
                     <excludePackageNames>
                         *.samples.*:
                         tools.*:
